# cloud-gob-data-industrial

./: .gitignore  Claude.md  Gemini.md  README.md  Taskfile.yml  package-lock.json  package.json  requirements.txt
.claude/agents/: admin-sistemas-legados.md  arquitecto-datos.md  arquitecto-plataforma.md  data-engineer.md  data-scientist.md  devsecops.md  experto-redes.md  finanzas.md
MVP/: .gitignore  README.md  RESULTADOS_EJECUCION.md  pyproject.toml
MVP/data/: generate_events.py  historical_costs.csv  kafka_events_billing.jsonl  kafka_events_production.jsonl
MVP/docs/: arquitectura_mvp.md  arquitectura_productiva.md  plan_implementacion.md
MVP/notebooks/: 00_data_generation.ipynb  01_forecast_costos.ipynb  02_deteccion_anomalias.ipynb  03_nlp_etiquetado.ipynb
docs/: ESTADO_ACTUAL.md  PLAN_MAESTRO_RESOLUCION.md  README.md
docs/arquitectura/: README.md  arquitectura-hub-spoke.md  arquitectura-plataforma.md  arquitectura-redes.md  revision-arquitectonica-v1.md
docs/baseline-inventario/: README.md  inventario-sistemas-legados.md  supuestos-validados.md
docs/consolidacion/: README.md  decisiones-consensuadas.md  diagramas-consolidados.md
docs/fase1/: baseline-financiero.md  conectividad-actual.md
docs/fase2/: arquitectura-datos.md  (+2 more)
entregables/: Caso_Negocio_LiderCloudFinOps.md  Caso_Negocio_LiderCloudFinOps_ESTRADA.md  MVP_IA_FinOps.md  MVP_IA_FinOps_ESTRADA.md  Memo_Ejecutivo_LiderCloudFinOps.md  Memo_Ejecutivo_LiderCloudFinOps_ESTRADA.md  Plan_Gantt.md  Plan_Gantt_ESTRADA.md  REPORTE_CONSISTENCIA_EXHAUSTIVO.md  REPORTE_CONSISTENCIA_VALIDADO_PDF.md
(+31 files in other folders)
