# MVP de IA para FinOps - Proyecto Python
# Usa `uv` para gestión ultra-rápida de dependencias

[project]
name = "mvp-ia-finops"
version = "1.0.0"
description = "MVP Event-First de IA para FinOps: Forecast, Anomaly Detection, Auto-Labeling"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Cloud FinOps Team"}
]
keywords = ["finops", "ai", "ml", "forecast", "anomaly-detection", "nlp", "kafka", "event-driven"]

dependencies = [
    # Core Data Processing
    "pandas>=1.5.0",
    "numpy>=1.23.0",

    # Machine Learning
    "scikit-learn>=1.2.0",
    "xgboost>=1.7.0",

    # Visualization
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",

    # Jupyter
    "jupyter>=1.0.0",
    "ipykernel>=6.20.0",
    "notebook>=7.0.0",
]

[project.optional-dependencies]
# Dependencias para producción (Kafka + GCP)
production = [
    "kafka-python>=2.0.2",
    "google-cloud-aiplatform>=1.25.0",
    "google-cloud-bigquery>=3.10.0",
    "google-cloud-storage>=2.10.0",
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.21.0",
]

# Dependencias de desarrollo
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.0.250",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Este es un proyecto de notebooks, no hay paquetes Python
packages = []

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
